<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".SplashScreen">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:background="@color/secondary"
        android:fontFamily="@font/sacramento"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        android:padding="13dp"
        android:text="@string/we_make_you_sparkle"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/devs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@color/primary"
        android:text="@string/devs"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp" />

</LinearLayout>